--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     container_name: backend
-    build: ./temporary-backend
+    build: .
     ports:
       - "8080:8080"
     environment:
