--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,13 +14,13 @@ jobs:
         with:
           python-version: "3.13"
 
-      - uses: actions/cache@v4
-        id: pip-cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      #   - uses: actions/cache@v4
+      #     id: pip-cache
+      #     with:
+      #       path: ~/.cache/pip
+      #       key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+      #       restore-keys: |
+      #         ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -30,18 +30,17 @@ jobs:
 
       - name: Run Bandit
         run: bandit -r main.py
+#       - name: Run tests
+#         run: pytest
 
-      - name: Run tests
-        run: pytest
-
-  sonarqube:
-    name: SonarQube
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v5
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#   sonarqube:
+#     name: SonarQube
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 0
+#       - name: SonarQube Scan
+#         uses: SonarSource/sonarqube-scan-action@v5
+#         env:
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
