--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,9 +30,9 @@ jobs:
 
       - name: Run Bandit
         run: bandit -r main.py
-#       - name: Run tests
-#         run: pytest
 
+      - name: Run tests
+        run: pytest
 #   sonarqube:
 #     name: SonarQube
 #     runs-on: ubuntu-latest
